; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/cs-etm-decoder/extr_cs-etm-decoder.c_cs_etm_decoder__reset.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/cs-etm-decoder/extr_cs-etm-decoder.c_cs_etm_decoder__reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs_etm_decoder = type { i32, i32 }

@OCSD_RESP_CONT = common dso_local global i32 0, align 4
@OCSD_OP_RESET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cs_etm_decoder__reset(%struct.cs_etm_decoder* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cs_etm_decoder*, align 8
  %4 = alloca i32, align 4
  store %struct.cs_etm_decoder* %0, %struct.cs_etm_decoder** %3, align 8
  %5 = load i32, i32* @OCSD_RESP_CONT, align 4
  %6 = load %struct.cs_etm_decoder*, %struct.cs_etm_decoder** %3, align 8
  %7 = getelementptr inbounds %struct.cs_etm_decoder, %struct.cs_etm_decoder* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 4
  %8 = load %struct.cs_etm_decoder*, %struct.cs_etm_decoder** %3, align 8
  %9 = getelementptr inbounds %struct.cs_etm_decoder, %struct.cs_etm_decoder* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @OCSD_OP_RESET, align 4
  %12 = call i32 @ocsd_dt_process_data(i32 %10, i32 %11, i32 0, i32 0, i32* null, i32* null)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i64 @OCSD_DATA_RESP_IS_FATAL(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %18

17:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %16
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @ocsd_dt_process_data(i32, i32, i32, i32, i32*, i32*) #1

declare dso_local i64 @OCSD_DATA_RESP_IS_FATAL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
